samples/_failures_safe/1761326933_6cb817_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_789e7c0b.c: In function ‘next_token’:
./samples/SAFE/__tmp_789e7c0b.c:153:23: error: expected ‘;’ at end of input
  153 |         token.value[1]
      |                       ^
      |                       ;
./samples/SAFE/__tmp_789e7c0b.c:153:9: error: expected declaration or statement at end of input
  153 |         token.value[1]
      |         ^~~~~
./samples/SAFE/__tmp_789e7c0b.c:153:9: error: expected declaration or statement at end of input
